# fmeta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.cn.md  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: _config.yml  design.md  index.md
src/: cli.rs  db.rs  detect.rs  lib.rs  main.rs  output.rs  traverse.rs
tests/: basic.rs
tests/fixtures/: sample.db  sample.docx  sample.epub
