[package]
name = "fmeta"
version = "0.5.0"
authors = ["ljh-sh <lijunhao@x-cmd.com>"]
edition = "2021"
rust-version = "1.74"
description = "Find alternative that emits files with rich metadata (mime, encoding) - AI-friendly"
readme = "README.md"
homepage = "https://github.com/ljh-sh/fmeta"
documentation = "https://github.com/ljh-sh/fmeta"
license = "Apache-2.0"
repository = "https://github.com/ljh-sh/fmeta"
keywords = ["find", "metadata", "mime", "encoding", "cli"]
categories = ["command-line-utilities", "filesystem"]
exclude = [".release-artifacts/", ".github/", "target/", "*.swp", "*.swo", "*~", ".DS_Store"]

[dependencies]
anyhow = "1.0.102"
chardetng = "1.0.0"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4"
imagesize = "0.14.0"
infer = "0.19.0"
kamadak-exif = "0.6.1"
lofty = "0.22.2"
lopdf = "0.36.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
